// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with any date and any time (empty time set) 1`] = `
<withOrientation
  forceInset={
    Object {
      "top": "always",
    }
  }
  style={
    Object {
      "backgroundColor": "rgb(45, 47, 127)",
    }
  }
>
  <StatusBar
    animated={true}
    backgroundColor="#2d2f7f"
    barStyle="light-content"
    showHideTransition="fade"
  />
  <ContentPadding
    padding={Object {}}
    style={Object {}}
  >
    <Component
      style={
        Object {
          "paddingBottom": 12,
          "paddingTop": 16,
        }
      }
      testID="filter-header"
    >
      <FilterHeaderCategories
        onFilterPress={[Function]}
        selectedCategories={Set {}}
      />
      <Component
        style={
          Object {
            "flexDirection": "row",
            "marginTop": 8,
          }
        }
      >
        <FilterHeaderButton
          label="filter by date: Any day"
          onPress={[Function]}
          style={
            Object {
              "marginRight": 8,
            }
          }
          text="Any day"
        />
        <FilterHeaderButton
          label="Any time"
          onPress={[Function]}
          style={
            Object {
              "marginRight": 8,
            }
          }
          text="Any time"
        />
        <FilterHeaderButton
          label="Filters"
          onPress={[Function]}
          style={
            Object {
              "marginRight": 8,
            }
          }
          text="Filters"
        />
      </Component>
    </Component>
  </ContentPadding>
  <Connect(DateRangePickerDialog)
    onApply={[Function]}
    onCancel={[Function]}
    visible={false}
  />
  <Connect(MultiSelectDialog)
    onApply={[Function]}
    onCancel={[Function]}
    visible={false}
  />
</withOrientation>
`;

exports[`renders correctly with any date and any time 1`] = `
<withOrientation
  forceInset={
    Object {
      "top": "always",
    }
  }
  style={
    Object {
      "backgroundColor": "rgb(45, 47, 127)",
    }
  }
>
  <StatusBar
    animated={true}
    backgroundColor="#2d2f7f"
    barStyle="light-content"
    showHideTransition="fade"
  />
  <ContentPadding
    padding={Object {}}
    style={Object {}}
  >
    <Component
      style={
        Object {
          "paddingBottom": 12,
          "paddingTop": 16,
        }
      }
      testID="filter-header"
    >
      <FilterHeaderCategories
        onFilterPress={[Function]}
        selectedCategories={Set {}}
      />
      <Component
        style={
          Object {
            "flexDirection": "row",
            "marginTop": 8,
          }
        }
      >
        <FilterHeaderButton
          label="filter by date: Any day"
          onPress={[Function]}
          style={
            Object {
              "marginRight": 8,
            }
          }
          text="Any day"
        />
        <FilterHeaderButton
          label="Any time"
          onPress={[Function]}
          style={
            Object {
              "marginRight": 8,
            }
          }
          text="Any time"
        />
        <FilterHeaderButton
          label="Filters"
          onPress={[Function]}
          style={
            Object {
              "marginRight": 8,
            }
          }
          text="Filters"
        />
      </Component>
    </Component>
  </ContentPadding>
  <Connect(DateRangePickerDialog)
    onApply={[Function]}
    onCancel={[Function]}
    visible={false}
  />
  <Connect(MultiSelectDialog)
    onApply={[Function]}
    onCancel={[Function]}
    visible={false}
  />
</withOrientation>
`;

exports[`renders correctly with date range and two times 1`] = `
<withOrientation
  forceInset={
    Object {
      "top": "always",
    }
  }
  style={
    Object {
      "backgroundColor": "rgb(45, 47, 127)",
    }
  }
>
  <StatusBar
    animated={true}
    backgroundColor="#2d2f7f"
    barStyle="light-content"
    showHideTransition="fade"
  />
  <ContentPadding
    padding={Object {}}
    style={Object {}}
  >
    <Component
      style={
        Object {
          "paddingBottom": 12,
          "paddingTop": 16,
        }
      }
      testID="filter-header"
    >
      <FilterHeaderCategories
        onFilterPress={[Function]}
        selectedCategories={Set {}}
      />
      <Component
        style={
          Object {
            "flexDirection": "row",
            "marginTop": 8,
          }
        }
      >
        <FilterHeaderButton
          label="filter by date: 2 Feb - 3 Feb"
          onPress={[Function]}
          style={
            Object {
              "marginRight": 8,
            }
          }
          text="2 Feb - 3 Feb"
        />
        <FilterHeaderButton
          label="Morning, Afternoon"
          onPress={[Function]}
          style={
            Object {
              "marginRight": 8,
            }
          }
          text="Morning, Afternoon"
        />
        <FilterHeaderButton
          label="Filters"
          onPress={[Function]}
          style={
            Object {
              "marginRight": 8,
            }
          }
          text="Filters"
        />
      </Component>
    </Component>
  </ContentPadding>
  <Connect(DateRangePickerDialog)
    onApply={[Function]}
    onCancel={[Function]}
    visible={false}
  />
  <Connect(MultiSelectDialog)
    onApply={[Function]}
    onCancel={[Function]}
    visible={false}
  />
</withOrientation>
`;

exports[`renders correctly with single date and single time 1`] = `
<withOrientation
  forceInset={
    Object {
      "top": "always",
    }
  }
  style={
    Object {
      "backgroundColor": "rgb(45, 47, 127)",
    }
  }
>
  <StatusBar
    animated={true}
    backgroundColor="#2d2f7f"
    barStyle="light-content"
    showHideTransition="fade"
  />
  <ContentPadding
    padding={Object {}}
    style={Object {}}
  >
    <Component
      style={
        Object {
          "paddingBottom": 12,
          "paddingTop": 16,
        }
      }
      testID="filter-header"
    >
      <FilterHeaderCategories
        onFilterPress={[Function]}
        selectedCategories={Set {}}
      />
      <Component
        style={
          Object {
            "flexDirection": "row",
            "marginTop": 8,
          }
        }
      >
        <FilterHeaderButton
          label="filter by date: 2 Feb"
          onPress={[Function]}
          style={
            Object {
              "marginRight": 8,
            }
          }
          text="2 Feb"
        />
        <FilterHeaderButton
          label="Afternoon"
          onPress={[Function]}
          style={
            Object {
              "marginRight": 8,
            }
          }
          text="Afternoon"
        />
        <FilterHeaderButton
          label="Filters"
          onPress={[Function]}
          style={
            Object {
              "marginRight": 8,
            }
          }
          text="Filters"
        />
      </Component>
    </Component>
  </ContentPadding>
  <Connect(DateRangePickerDialog)
    onApply={[Function]}
    onCancel={[Function]}
    visible={false}
  />
  <Connect(MultiSelectDialog)
    onApply={[Function]}
    onCancel={[Function]}
    visible={false}
  />
</withOrientation>
`;
